--- a/main.css
+++ b/main.css
@@ -16,6 +16,10 @@ ul {
     }
   }
 
+  .disabled {
+    cursor: default !important;
+    pointer-events: none !important;
+  }
   .gif {
       top: 0px;
     float: left;
