--- a/main.css
+++ b/main.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+html {
+  overflow: hidden;
+}
 
 ul {
     list-style-type: none;
@@ -90,10 +93,6 @@ ul {
     background-position: 0 90%;
     background-repeat: repeat no-repeat;
     background-size: 4px 3px;
-    border-radius: 15px 225px 255px 15px 15px 255px 225px 15px;
-    border-style: solid;
-    border-width: 2px;
-    box-sizing: border-box;
     color: #ffc2cc;
     font-family: 'Quicksand', sans-serif;
     cursor: pointer;
@@ -111,28 +110,24 @@ ul {
     width: 85%;
     margin-bottom: 2%;
     font-weight: 100;
-    border:2px solid rgb(204, 204, 204);
-    border-radius:4px;
+    border: 0px;
+    background: transparent;
   }
   
   .button-55:hover {
-    border-color:rgb(238, 175, 202);
-    box-shadow:0 0 8px 0 rgb(238, 175, 202);
+    color: rgb(255, 231, 235);
+    transform: scale(1.1, 1.1);
   }
-  
-  .button-55:focus {
-    box-shadow: rgba(0, 0, 0, .3) 2px 8px 4px -6px;
-  }
-
   .container {
-    margin-top: 16%;
-    padding-bottom: 4%;
+    margin-top: 20%;
+    bottom: 0;
     display: flex;
     justify-content:center;
     text-align: center;
   }
   
   .item {
+    bottom: 5px;
     flex-grow: 1;
     align-items: center;
     height: 100px;
