--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 html {
   overflow: hidden;
+  background-color: white;
 }
 
 ul {
